* Wed Dec 11 2013 Carl Edquist <edquist@cs.wisc.edu> - 1.3.2
- Add grid proxy support to osg-koji setup (SOFTWARE-1287)
- Check client cert for expiration before use (SOFTWARE-1288)
- Remove long-deprecated 'allbuild' task
- Add support for --repo=internal in branches/osg-internal (SOFTWARE-1258)

* Tue Oct 22 2013 Matyas Selmeci <matyas@cs.wisc.edu> - 1.3.1
- Fix target detection in osg-build
- Fix --upcoming flag in osg-build

* Mon Oct 21 2013 Matyas Selmeci <matyas@cs.wisc.edu> - 1.3.0
- Use first commonName in a cert if there are multiple
- Rework osg-promote and osg-build to work with the osg-next koji and svn layout
- Major refactoring of osg-promote
- Remove 'prerelease' and 'release' routes from osg-promote since they will never be used
- Remove rpm-ripper -- it was only used for JDK which won't be getting updated in the future
- Do not allow someone to do OSG builds from the HCC git repo (contrib. by Brian Bockelman)
- Have osg-import-srpm put upstream URL into the .source file (as a comment) instead of the README

* Mon Aug 26 2013 Matyas Selmeci <matyas@cs.wisc.edu> - 1.2.8
- fix syntax error in osg-promote

* Mon Aug 19 2013 Matyas Selmeci <matyas@cs.wisc.edu> - 1.2.7
- added git support (contrib. by Brian Bockelman)

* Fri Aug 09 2013 Matyas Selmeci <matyas@cs.wisc.edu> - 1.2.6
- shorten arguments to rpmbuild for srpm builds
- add %osg macro for rpm builds

* Fri Feb 15 2013 Matyas Selmeci <matyas@cs.wisc.edu> - 1.2.5
- new flag, "--upcoming" for building packages into the new
  el[56]-osg-upcoming koji targets.
- warning for doing a non-svn non-scratch koji build changed into error.
- error on attempt to do a non-scratch koji build using the upcoming targets
  when building from trunk, or from using non-upcoming targets when building
  from the upcoming area in svn
