@@ -1,3 +1,6 @@
+* ??? ??? ?? 2014 Matyas Selmeci <matyas@cs.wisc.edu> - 1.3.3
+- Make client cert check Python 2.4-compatible (SOFTWARE-1366)
+
 * Wed Dec 11 2013 Carl Edquist <edquist@cs.wisc.edu> - 1.3.2
 - Add grid proxy support to osg-koji setup (SOFTWARE-1287)
 - Check client cert for expiration before use (SOFTWARE-1288)
